@@ -10,29 +10,42 @@ public abstract class Layer {
     protected Layer nextLayer;
     protected Layer previousLayer;
 
-    public abstract double[] getOutput(List<double[][]> input);
+    // ========== BATCH INTERFACE ==========
+    // Теперь основные методы работают со списками (батчами)
 
-    public abstract double[] getOutput(double[] input);
+    /**
+     * Forward pass для батча входов
+     * @param batchInput список входов для батча, где каждый элемент — List<double[][]> (каналы одного изображения)
+     * @return список выходов для батча (List<double[]> или что требует конкретный слой)
+     */
+    public abstract List<double[]> getOutputBatch(List<List<double[][]>> batchInput);
 
-    public abstract void backPropagation(double[] dLdO);
+    /**
+     * Backpropagation для батча градиентов
+     * @param dLdOBatch список градиентов для батча
+     */
+    public abstract void backPropagationBatch(List<double[]> dLdOBatch);
 
-    public abstract void backPropagation(List<double[][]> dLdO);
-
+    // ========== METADATA ==========
     public abstract int getOutputLength();
-
     public abstract int getOutputRows();
-
     public abstract int getOutputCols();
-
     public abstract int getOutputElements();
     public abstract int getParameterCount();
 
-    double[] matrixToVector(List<double[][]> input) {
-        double[][] first = input.getFirst();
+    // ========== UTILITY METHODS ==========
+
+    /**
+     * Конвертирует список матриц (каналы) в вектор
+     */
+    protected double[] matrixToVector(List<double[][]> input) {
+        if (input.isEmpty()) return new double[0];
+
+        double[][] first = input.get(0);
         int rows = first.length;
         int cols = first[0].length;
         double[] vector = new double[input.size() * rows * cols];
-        
+
         int i = 0;
         for (double[][] matrix : input) {
             for (double[] row : matrix) {
@@ -43,9 +56,11 @@ public abstract class Layer {
         return vector;
     }
 
-    List<double[][]> vectorToMatrix(double[] input, int length, int rows, int cols) {
+    /**
+     * Конвертирует вектор в список матриц (каналы)
+     */
+    protected List<double[][]> vectorToMatrix(double[] input, int length, int rows, int cols) {
         List<double[][]> out = new ArrayList<>(length);
-
         int i = 0;
         for (int l = 0; l < length; l++) {
             double[][] matrix = new double[rows][];
@@ -58,5 +73,4 @@ public abstract class Layer {
         }
         return out;
     }
-
 }
